# clinic-x

./: README.md  package-lock.json  package.json  tailwind.config.js  tips.txt  vite.config.ts
.github/workflows/: build.yml  main.yml
src/: App.tsx  initData.ts  main.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: datastore.rs  handlers.rs  lib.rs  main.rs  types.rs
src-tauri/src/datastore/: app_settings.rs  appointment.rs  appointment_day.rs  appointment_fees.rs  appointment_wrapper.rs  clinic_info.rs  db.rs  diagnosis.rs  employee.rs  expenses.rs  fee_and_services.rs  patient.rs  patient_medcal_history.rs  patient_midcal_history.rs  recent.rs  request.rs  search.rs
src-tauri/src/datastore/migrations/: app_settings.rs  appointment.rs  appointment_day.rs  appointment_fees.rs  clinic_info.rs  employee.rs  fee_and_services.rs  mod.rs  patient.rs
src-tauri/src/handlers/: appointment.rs  appointment_day.rs  appointment_fees.rs  auth.rs  clinic_info.rs  db_backup.rs  diagnosis.rs  employee.rs  expenses.rs  fee_and_services.rs  mod.rs  patient.rs  patient_medical_history.rs  queue_and_recently.rs  request.rs  search.rs
src-tauri/src/models/: auth.rs
src/api/: appSettings.ts  appointment.ts  appointmentDay.ts  appointmentFees.ts  appointmentWrapper.ts  clinicInfo.ts  diagnosis.ts  employee.ts  expenses.ts  feeAndServices.ts  patient.ts  queueAndRecently.ts  request.ts
src/components/: Calendar.tsx  CalendarEvent.tsx  ContactAndInsurance.tsx  Navbar.tsx  PatientInfo.tsx  PatientMedicalInfo.tsx  PatientQueue.tsx  Prescriptions.tsx  (+7 more)
(+109 files in other folders)
